Fix dark mode for buttons

--- a/static/landing.css
+++ b/static/landing.css
@@ -15,11 +15,12 @@
     padding: 8px;
     padding-left: 0;
     border-radius: 8px;
-    border: 2px solid white;
+    border: 2px solid #543631;
     text-align: center;
     font-family: "Fira Sans";
     font-size: 10pt;
     color: inherit;
+    align-items: center;
 }
 
 .discord-button img {
@@ -32,22 +33,34 @@
     padding: 8px;
     padding-left: 0;
     border-radius: 8px;
-    border: 2px solid white;
+    border: 2px solid #543631;
     text-align: center;
     font-family: "Fira Sans";
     font-size: 10pt;
     color: inherit;
+    align-items: center;
 }
 
 .github-button img {
-    height: 15px;    
+    height: 15px;
 }
 
 @media (prefers-color-scheme: dark) {
     .discord-button {
-        color: white;
+        color: white !important;
+        border: 2px solid white;
     }
+
+    .discord-button img {
+        filter: invert(100%) sepia(2%) saturate(0%) hue-rotate(177deg) brightness(103%) contrast(101%);
+    }
+
     .github-button {
-        color: white;
+        color: white !important;
+        border: 2px solid white;
+    }
+
+    .github-button img {
+        filter: invert(100%) sepia(2%) saturate(0%) hue-rotate(177deg) brightness(103%) contrast(101%);
     }
 }
